# progfiguration

./: .gitignore  LICENSE  pyproject.toml  readme.md  tasks.py
.github/workflows/: docs.yml
docs/: .gitignore  changelog.md  conf.py  dry-experiment.md  index.rst  inventory-format.md  lobotomization.md  progfigsite-packages.md  todo.md  versioning.md  why.md
docs/appendix/: changelog.md  changelog.rst  index.rst  todo.md  todo.rst
docs/commands/: index.rst  progfigsite.rst  progfiguration.rst
docs/design/: index.rst  progfigsite-packages.md  vendoring-core.rst  versioning.rst  why.rst
docs/experiments/: age-scaling.rst  dry-settings-role.md  dry-settings-role.rst  index.rst
docs/experiments/setuptools-dynamic-version/: dynvertest.py  pyproject.toml  readme.md  readme.rst
docs/getting-started/: examples.rst  index.rst  new-site.rst
docs/legacy/: index.rst  installing.md  installing.rst
docs/lore/: index.rst
docs/progfigsite/: builddata.rst  development.rst  groups.rst  index.rst  inventory.rst  nodes.rst  roles.rst  rootmembers.rst
docs/setuptools-dynamic-version/: readme.md
docs/src/: conf.py  index.rst
docs/src/_templates/: base.html
docs/src/advanced/: index.rst  vendoring.rst
docs/src/appendix/: changelog.rst  index.rst  pyproject.rst  sphinx.rst  todo.rst  users.rst
docs/src/appendix/advanced/: custom-inventories.rst  index.rst  vendoring.rst
docs/src/appendix/experiments/: dry-settings-role.rst  (+2 more)
docs/src/commands/: index.rst  progfiguration.rst
docs/src/design/: hypotheses.rst  index.rst  initial-questions.rst  inventory-format.rst  remoting.rst  roles.rst  vendoring-core.rst
docs/src/developer-reference/: design.rst  entrypoints.rst  index.rst
docs/src/for-ansible-users/: controller.rst  index.rst  templates.rst  variables.rst
docs/src/getting-started/: build-deploy.rst  create-nodes-groups.rst  create-role.rst  examples.rst  index.rst  new-site.rst  why-use-progfiguration.rst
docs/src/lore/: lobotomization.rst
docs/src/progfigsite/: autovendor.rst  dependencies.rst  groups.rst  inventory.rst  nodes.rst  roles.rst  sitelib.rst
docs/src/user-reference/: concepts.rst  index.rst  packaging.rst  progfigsite-examples.rst  recommendations.rst  role-arguments.rst  versioning.rst  why-use-progfiguration.rst
progfiguration/: __init__.py  age.py  cmd.py  progfigsite_validator.py  progfigtypes.py  ssh.py  util.py
progfiguration/age/: __init__.py  asfstore.py
progfiguration/builddata/: __init__.py
progfiguration/cli/: __init__.py  progfiguration_cmd.py  progfiguration_core_cmd.py  progfiguration_site_cmd.py  util.py
progfiguration/example_site/: __init__.py  inventory.yml
progfiguration/example_site/groups/: universal.py
progfiguration/example_site/nodes/: node1.py
progfiguration/example_site/roles/: settz.py
progfiguration/inventory/: __init__.py  invstores.py  nodes.py  roles.py
progfiguration/inventory/storeimpl/: __init__.py  agesecrets.py  invconf.py  memhosts.py
progfiguration/localhost/: __init__.py
progfiguration/newsite/: __init__.py  exgroup.py  exnode.py  exrole.py  inventory.conf.temple  inventory.py.temple  progfigsite-init.py.temple  progfigsite_shim.py.temple  pyproject.toml.temple  universalgrp.py  version.py.temple
progfiguration/progfigbuild/: __init__.py
progfiguration/sitehelpers/: agesecrets.py  invconf.py  siteversion.py
progfiguration/sitewrapper/: __init__.py
src/progfiguration/: __init__.py  cmd.py  progfigsite_validator.py  progfigtypes.py
src/progfiguration/cli/: progfiguration_core_cmd.py  progfiguration_site_cmd.py
src/progfiguration/inventory/: __init__.py  invstores.py  nodes.py  roles.py
src/progfiguration/localhost/: __init__.py  disks.py
src/progfiguration/newsite/: __init__.py  exnode.py  progfigsite-init.py.temple  pyproject.toml.temple  readme.md.temple  version.py.temple
src/progfiguration/progfigbuild/: __init__.py
src/progfiguration/remotebrute/: __init__.py
src/progfiguration/sitehelpers/: __init__.py  agesecrets.py  invconf.py
src/progfiguration/sitewrapper/: __init__.py
tests/: __init__.py  test_age_secretstore.py  test_cli_core_newsite_pip_install_editable_development_extras.py  test_cli_core_newsite_validate.py  test_cmd.py  test_example_site.py  test_packaging.py  test_site.py
tests/data/: __init__.py
tests/data/nnss/: controller.age  node1.age  pyproject.toml  readme.md
tests/data/nnss/nnss_progfigsite/: __init__.py  inventory.conf  inventory.py  version.py
tests/data/nnss/nnss_progfigsite/cli/: progfigsite_shim.py
tests/data/nnss/nnss_progfigsite/groups/: group1.py  universal.py
tests/data/nnss/nnss_progfigsite/nodes/: node1.py  node1.secrets.json
tests/data/nnss/nnss_progfigsite/roles/: settz.py
tests/data/simple/: pyproject.toml  readme.md
tests/data/simple/example_site/: __init__.py  inventory.conf  inventory.py  version.py
tests/data/simple/example_site/cli/: progfigsite_shim.py
tests/data/simple/example_site/groups/: group1.py  universal.py
tests/data/simple/example_site/nodes/: node1.py
tests/test_newsite_results/: __init__.py  test_install_editable_validate.py  test_pip_build_install_package_validate.py
tests/test_site/: __init__.py
tests/test_site/nnss/: readme.md
(+21 files in other folders)
