[project]
name = "nnss_progfigsite"
dynamic = ["version"]
description = "Nevada National Security Site progfigsite"
license = {text = "MIT"}
readme = "readme.md"
requires-python = ">=3.10"

[[project.authors]]
name = "Micah R Ledbetter"
email = "me@micahrl.com"

[project.scripts]
progfigsite = "progfigsite.cli.progfigsite_shim:main"

[project.optional-dependencies]
development = [
    # Progfiguration itself
    "progfiguration",

    # Development tools
    "black",
    "build",
    "mypy",
    "twine",
]

[project.urls]
Homepage = "https://github.com/mrled/progfiguration/"

[build-system]
requires = [
    "setuptools",
]
build-backend = "setuptools.build_meta"

[tool.setuptools.package-data]
progfigsite = ["*"]

[tool.setuptools.dynamic]
version = {attr = "progfigsite.get_version"}

[tool.black]
line-length = 120
