[project]
name = "example_site"
dynamic = ["version"]
description = "progfiguration example_site"
license = { text = "MIT" }
readme = "readme.md"
requires-python = ">=3.10"
dependencies = []

[[project.authors]]
name = "Micah R Ledbetter"
email = "me@micahrl.com"

[project.scripts]
progfigsite = "example_site.cli.progfigsite_shim:main"

[project.optional-dependencies]
development = [
    # Progfiguration itself
    "progfiguration",

    # Development tools
    "black",
    "build",
    "mypy",
    "twine",
]

[project.urls]
Homepage = "https://github.com/mrled/progfiguration/"

[build-system]
requires = ["setuptools"]
build-backend = "setuptools.build_meta"

[tool.setuptools.dynamic]
version = { attr = "example_site.get_version" }

[tool.setuptools.package-data]
"example_site" = ["*"]
